Add nodemon and README

--- a/package.json
+++ b/package.json
@@ -9,5 +9,11 @@
   "private": true,
   "dependencies": {
     "express": "^4.18.1"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.18"
+  },
+  "scripts": {
+    "start": "nodemon index.js"
   }
 }
