--- a/package.json
+++ b/package.json
@@ -8,14 +8,22 @@
   "license": "MIT",
   "private": true,
   "dependencies": {
+    "@prisma/client": "^3.15.2",
     "express": "^4.18.1",
     "helmet": "^5.1.0",
     "morgan": "^1.10.0"
   },
   "devDependencies": {
-    "nodemon": "^2.0.18"
+    "nodemon": "^2.0.18",
+    "prisma": "^3.15.2"
   },
   "scripts": {
-    "start": "nodemon index.js"
+    "start": "nodemon src/index.js",
+    "migrate": "prisma migrate dev",
+    "deploy": "prisma migrate deploy && prisma generate",
+    "seed": "prisma db seed"
+  },
+  "prisma": {
+    "seed": "node src/seed.js"
   }
 }
