--- a/.env
+++ b/.env
@@ -7,3 +7,4 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL="postgresql://postgres:123@localhost:5433/weather?schema=public"
+PORT=8000
